[package]
name = "eee"
version = "0.1.0"
authors = ["\"ferhatgec\""]
edition = "2018"
description = "Access e codes from Rust."
keywords = ["term", "text", "e", "europe", "rust"]
readme = "README.md"
repository = "https://github.com/ferhatgec/eee/"
documentation = "https://docs.rs/eee"
license = "MIT"

include = [
    ".gitignore",

    "src/*.rs",

    "Cargo.toml",
]

[dependencies]